# The-Simpsons-Hit-and-Run

./: .gitignore  CMakeLists.txt  README.md
ci/: README.md  github-build.yml
cmake/: linux-poc.cmake
code/ai/actor/: ActorAnimationUFO.h  actoranimation.h  actoranimationwasp.h
code/camera/: supercamcontroller.cpp
code/contexts/: bootupcontext.cpp
code/data/: gamedatamanager.cpp  gamedatamanager.h
code/data/memcard/: memorycardmanager.cpp
code/gameflow/: gameflow.cpp
code/main/: errorsWIN32.h
code/memory/: memoryutilities.cpp  srrmemory.cpp
code/presentation/gui/ingame/: guiscreenpausesettings.cpp
code/sound/: soundrenderercallback.cpp
code/sound/avatar/: carsoundparameters.cpp
code/sound/soundfx/: positionalsoundsettings.cpp  reverbsettings.cpp
code/sound/soundrenderer/: dasoundplayer.cpp  sounddynaload.cpp
code/sound/tuning/: globalsettings.cpp
code/worldsim/character/: charactermappable.cpp
code/worldsim/redbrick/vehiclecontroller/: vehiclemappable.cpp
docs/: bugs.md  sdl-keyboard-mouse-controls.md
game/code/contexts/: context.cpp  linux_poc_contexts.cpp  linux_poc_contexts.h
game/code/gameflow/: gameflow.cpp
game/code/main/: commandlineoptions.cpp  game.cpp  globaltypes.h  linuxmain.cpp  linuxplatform.cpp  linuxplatform.h  singletons_linux_poc.cpp  singletons_linux_poc.h
game/code/port/: linux_poc_bootup_stubs.cpp  linux_poc_config.h  linux_poc_filesystem.cpp  linux_poc_filesystem.h  linux_poc_inputmanager.cpp  linux_poc_loadingmanager.cpp  linux_poc_memory.cpp  linux_poc_renderflow.cpp  linux_poc_soundmanager.cpp
game/code/port/stubs/: README.md  p3d_compat.hpp  raddebug.hpp  raddebugcommunication.hpp  raddebugconsole.hpp  raddebugwatch.hpp  radfile.hpp  radmemory.hpp  radmemorymonitor.hpp  radmovie2.hpp  radthread.hpp  radtime.hpp
game/code/port/stubs/atc/: atcmanager.h
game/code/port/stubs/cards/: cardgallery.h
game/code/port/stubs/cheats/: cheatinputsystem.h
game/code/port/stubs/data/: gamedatamanager.h
game/code/port/stubs/data/memcard/: memorycardmanager.h
game/code/port/stubs/debug/: debuginfo.h  profiler.h
game/code/port/stubs/events/: eventmanager.h
game/code/port/stubs/input/: inputmanager.h
game/code/port/stubs/interiors/: interiormanager.h
game/code/port/stubs/loading/: loadingmanager.h
game/code/port/stubs/memory/: memoryutilities.h  srrmemory.h  stlallocators.h
game/code/port/stubs/mission/: gameplaymanager.h  missionmanager.h
game/code/port/stubs/mission/charactersheet/: charactersheetmanager.h
game/code/port/stubs/mission/rewards/: rewardsmanager.h
game/code/port/stubs/p3d/: context.hpp  loadmanager.hpp  p3dtypes.hpp  utility.hpp
game/code/port/stubs/pddi/: pddi.hpp
game/code/port/stubs/presentation/: presentation.h  tutorialmanager.h
game/code/port/stubs/presentation/gui/: guisystem.h
game/code/port/stubs/presentation/gui/ingame/: guiscreenmissionload.h
game/code/port/stubs/presentation/presevents/: presentationevent.h
game/code/port/stubs/render/RenderFlow/: RenderFlow.h
game/code/port/stubs/render/rendermanager/: renderlayer.h  rendermanager.h
game/code/port/stubs/sound/: soundmanager.h
game/code/port/stubs/supersprint/: supersprintmanager.h
game/code/port/stubs/worldsim/: worldphysicsmanager.h
game/code/port/stubs/worldsim/character/: charactermanager.h
libs/pure3d/p3d/platform/linux/: platform.hpp
libs/pure3d/p3d/platform/win32/: platform.hpp
libs/pure3d/p3d/shadow/: shadow_ps2.cpp
libs/radcore/inc/: radlinkedclass.hpp
libs/radcore/src/radcontroller/: sdlcontroller.cpp
libs/radcore/src/radfile/common/: platformdrives.cpp
libs/radcore/src/radfile/sdl/: sdldrive.cpp  sdldrive.hpp
libs/radcore/src/radmemory/: platalloc.cpp
libs/radcore/src/radprofiler/: microprofile.cpp
libs/radcore/src/radthread/: system.cpp  thread.cpp
libs/radmovie/src/common/: binkmovieplayer.cpp  binkrenderstrategy.cpp  ffmpegmovieplayer.cpp  movieplayer.cpp
libs/radscript/src/namespace/: namespace.cpp
libs/radsound/src/hal/common/: softwarepositionalgroup.cpp
libs/radsound/src/hal/win32/: buffer.cpp  bufferloader.cpp  positionalgroup.cpp  voice.cpp
libs/radsound/src/radsound/: clip.cpp
libs/scrooby/src/utility/: AsyncFileLoader.cpp
port-docs/: HANDOFF.md  README.md  desktop-build.md  initial-poc-plan.md  linux-native-port.md  runtime-validation.md  savegame-tool.md
port-docs/high-level/: README.md  challenges.md  porting-strategy.md  pure3d-runtime-options.md  workstreams.md
tools/linux-runtime/: Dockerfile  dev-run.sh  run-game.sh  run-local-game.sh  srr2-launch  srr2.desktop  validate-assets.sh
tools/savegame/: README.md  go.mod  go.sum
tools/savegame/cmd/srr2-save/: main.go
tools/savegame/internal/tui/: app.go  app_test.go
tools/savegame/native/: save.go  save_test.go
tools/savegame/storage/: storage_linux.go  storage_linux_test.go
